# duckdb-query-runner

./: .gitignore  Cargo.toml  Makefile  README.md
docker/: Dockerfile
src/: command_line.rs  constants.rs  core.rs  duckdb_client.rs  log_utils.rs  main.rs  persistence.rs  template.rs
