[package]
name = "duckdb-query-runner"
version = "1.1.0"
edition = "2021"


[dependencies]
log = "0.4.20"
pretty_env_logger = "0.5.0"

duckdb = { version = "0.10.1", features = ["parquet", "csv"]}

serde_yaml = "0.9.1"
serde = { version = "1.0", features = ["derive"] }

clap = { version = "4.4.11", features = ["derive", "env"] }
tera = { version = "1", default-features = false }
anyhow = "1.0.79"

futures = "0.3.29"
tokio-stream = "0.1.14"
tokio = { version = "1", default-features=false, features = ["macros", "rt-multi-thread"] }
